tests/ui/type-alias-impl-trait/ice-failed-to-resolve-instance-for-110696.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/ice-failed-to-resolve-instance-for-110696.rs:43:6
   |
LL | impl<T: MyFrom<Phantom2<DummyT<U>>>, U> MyIndex<DummyT<T>> for Scope<U> {
   |      ^ unconstrained type parameter

error: item does not constrain `DummyT::{opaque#0}`
  --> $DIR/ice-failed-to-resolve-instance-for-110696.rs:30:8
   |
LL |     fn new() -> Self {
   |        ^^^
   |
   = note: consider removing `#[define_opaque]` or adding an empty `#[define_opaque()]`
note: this opaque type is supposed to be constrained
  --> $DIR/ice-failed-to-resolve-instance-for-110696.rs:20:18
   |
LL | type DummyT<T> = impl F;
   |                  ^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0207`.
